--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand vt-p" href="#">Yann et Van&eacute;ssa</a>
+          <a class="navbar-brand vt-p" href="#">Y. and V.</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
